--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dev_dependencies:
     sdk: flutter
   firebase_core: ^0.4.0+9
   cloud_firestore: ^0.13.5
+  firebase_auth: ^0.16.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
