--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dev_dependencies:
   firebase_core: ^0.4.0+9
   cloud_firestore: ^0.13.5
   firebase_auth: ^0.16.0
+  image_picker: ^0.6.5+3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
