--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dev_dependencies:
   cloud_firestore: ^0.13.5
   firebase_auth: ^0.16.0
   image_picker: ^0.6.5+3
+  firebase_storage: ^3.1.5
+  firebase_messaging: ^6.0.15
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
